# oh-my-clanker

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  env.example  hatch_build.py  justfile  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.config/: wt.toml
.github/workflows/: ci.yml  e2e.yml
.omc/: config.yaml
.omc/config/: AGENTS.md
.omc/internal/: AGENTS.md
.opencode/: INSTALL.md
.opencode/plugins/: omc.js
docker/: Dockerfile.e2e  PLUGIN-NOTES.md  setup-plugins.sh
docker/stub-jira-mcp/: server.py  tickets.json
skills/check-wt-config/: SKILL.md
skills/create-mr/: SKILL.md
skills/document/: SKILL.md
skills/explain/: SKILL.md
skills/explain-dependency/: SKILL.md
skills/finish/: SKILL.md
skills/get-mr-description/: SKILL.md
skills/gitnexus-document/: SKILL.md
skills/gitnexus-ensure/: SKILL.md
skills/gitnexus-explain/: SKILL.md
skills/gitnexus-index/: SKILL.md
skills/implement/: SKILL.md  quality-reviewer.md
skills/index/: SKILL.md
skills/integrate/: SKILL.md
skills/investigate/: SKILL.md  worker-mission.md
skills/plan/: SKILL.md
skills/rebase-main/: SKILL.md
skills/review/: SKILL.md
skills/slug/: SKILL.md
skills/spec/: SKILL.md
skills/squash/: SKILL.md
skills/start/: SKILL.md
skills/verify/: SKILL.md
src/omc/: __init__.py  _buildinfo.py  agentsmd.py  buildprogress.py  cli.py  configure.py  dependency.py  depwatch.py  errors.py  gitnexus.py  installer.py  installsrc.py  internal.py  mirror.py  notify.py  plugin.py  probe.py  skills_source.py  slug.py  start.py  terminals.py  toolctx.py  watch.py  watchlock.py  worktree.py  wtconfig.py
tests/e2e/: conftest.py  harness.py  judge.py  test_e2e_chain.py  test_e2e_dependency.py  test_e2e_docs_artifact.py  test_e2e_finish.py  test_e2e_first_run.py  test_e2e_gitnexus.py  test_e2e_integrate.py  test_e2e_interactive.py  test_e2e_notify.py  test_e2e_slug_matrix.py  test_e2e_smoke.py  test_e2e_start.py  test_e2e_watch.py
tests/unit/: _mutexproc.py  _stubs.py  test_agentsmd.py  test_buildinfo_hook.py  test_buildprogress.py  test_cli.py  test_config_store.py  test_configure.py  test_dependency.py  test_depwatch.py  test_docs_model.py  test_errors.py  test_gitnexus_update.py  test_installer.py  test_installsrc.py  test_internal.py  test_mirror.py  test_notify.py  test_plugin.py  test_plugin_manifests.py  test_probe.py  test_progress_bar.py  test_providers.py  test_resolve.py  test_shells.py  test_skills_source.py  test_slug.py  test_start.py  test_start_mutex.py  test_terminals.py  (+7 more)
(+92 files in other folders)
