[project]
name = "omc"
version = "0.1.0"
description = "Oh My Clanker! Turn a ticket into a prepared worktree with a seeded LLM session."
requires-python = ">=3.12"
license = "MIT"
dependencies = ["questionary>=2.0,<3"]

[project.scripts]
omc = "omc.cli:main"

[dependency-groups]
dev = ["pytest>=8", "testcontainers>=4.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omc"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "omc/assets/skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: dockerized end-to-end tests (opt-in, slow, real LLMs)"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# wtconfig embeds the wt.toml starter verbatim; its shell one-liner exceeds 100 cols.
"src/omc/wtconfig.py" = ["E501"]
