[project]
name = "omc"
version = "0.1.0"
description = "Oh My Clanker! Turn a ticket into a prepared worktree with a seeded LLM session."
requires-python = ">=3.12"
license = "MIT"
dependencies = ["questionary>=2.0,<3", "pyyaml>=6,<7"]

[project.scripts]
omc = "omc.cli:main"

[dependency-groups]
dev = ["pytest>=8", "testcontainers>=4.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omc"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "omc/assets/skills"

# Stamp build-time provenance into omc/_buildinfo.py inside built artifacts (see
# hatch_build.py). Runs for both `uv tool install <repo>` and `uv tool install git+…`.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: dockerized end-to-end tests (opt-in, slow, real LLMs)",
    "expensive: LLM-heavy E2E (documentation generation) - run only with explicit user agreement",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# ruff 0.16 started formatting fenced code blocks inside markdown; the docs
# tree holds dated design/plan RECORDS whose code snippets must stay verbatim.
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# wtconfig embeds the wt.toml starter verbatim; its shell one-liner exceeds 100 cols.
"src/omc/wtconfig.py" = ["E501"]
